add quantization demo

--- a/python/cifar10_demo.ipynb
+++ b/python/cifar10_demo.ipynb
@@ -5,7 +5,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os, sys, cv2, time\n",
+    "old_stdout = sys.stdout\n",
+    "\n",
+    "import configparser\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from contextlib import contextmanager\n",
+    "from simplenet_cifer10 import *\n",
+    "from PIL import Image\n",
+    "\n",
+    "@contextmanager\n",
+    "def silence_stdout():\n",
+    "    old_target = sys.stdout\n",
+    "    try:\n",
+    "        with open(os.devnull, \"w\") as new_target:\n",
+    "            sys.stdout = new_target\n",
+    "            yield new_target\n",
+    "    finally:\n",
+    "        sys.stdout = old_target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "I = Image.open('./files/ship2.png')\n",
+    "# I = Image.open('./files/plane.png')\n",
+    "\n",
+    "I = I.convert(\"RGB\")\n",
+    "I_array = np.array(I)\n",
+    "# I_array = cv2.resize(I_array, (64,64))\n",
+    "\n",
+    "def imshow(img):\n",
+    "    #img = img / 2 + 0.5     # unnormalize\n",
+    "    #npimg = img.numpy()\n",
+    "    plt.imshow(img)\n",
+    "    plt.show()\n",
+    "    #return npimg\n",
+    "imshow(I_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference(I_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit inference(I_array)"
+   ]
   }
  ],
  "metadata": {
