--- a/python/cifar10_demo.ipynb
+++ b/python/cifar10_demo.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "I = Image.open('./files/ship2.png')\n",
+    "I = Image.open('./files/ship2truck.png')\n",
     "# I = Image.open('./files/plane.png')\n",
     "\n",
     "I = I.convert(\"RGB\")\n",
